# workshop-scaneo-bids25

./: 01_scaneo.ipynb  02_contributing.ipynb  02_eotdl.ipynb  03_exploring.ipynb  04_scaneo_labelling.ipynb  05_ingesting_dataset.ipynb  06_training.ipynb  07_ingesting_models.ipynb  README.md  pyproject.toml  scaneo.ipynb
